1999-11-18  Paul Eggert  <eggert@twinsun.com>

	* time/strftime.c (my_strftime): Some old compilers object to
	'\a', so don't bother optimizing for it.

1999-11-19  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/setrlimit.c (__setrlimit): Don't modify
	the rlimits structure passed in.

1999-11-19  Andreas Jaeger  <aj@suse.de>

	* include/sys/resource.h (__setrlimit): Add prototype.

1999-11-19  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-load.c (_dl_init_paths): Allocate correct number of
	entries for rtld_search_dirs[0].
	Patch by David Mosberger <davidm@hpl.hp.com>.

1999-11-18  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-ctype.c: Don't predefine the character
	classes and mappings of ISO 14652.

	* locale/programs/ld-ctype.c: Punt if character class definitions
	to not consists of tok_bsymbol (for now).

	* time/strptime.c (day_of_the_week): Make sure result is never
	negative.
	(strptime_internal): Allow %C without %y.

1999-11-18  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/linux_fsinfo.h: Sorted entries and added
	comments.

	* sysdeps/unix/sysv/linux/getpt.c: Include linux_fsinfo.h instead
	of defining *_SUPER_MAGIC.
	* sysdeps/unix/sysv/linux/grantpt.c: Likewise.

1999-11-18  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/locale.c: Don't handle LC_ALL together with the
	other categories when printing the value.
	Patch by Akira YOSHIYAMA <yosshy@tkf.att.ne.jp>.

	* locale/locale.h: Correct comment about LC_ALL.

1999-11-17  Ulrich Drepper  <drepper@cygnus.com>

	* locale/programs/ld-ctype.c (ctype_output): Correct computation of
	nelems.  Correctly compute index for additional character classes.
	(ctype_read): Handle charclass and charconv definitions.  Also
	recognize arbitrary strings as mapping names.
	* locale/programs/ld-time.c (time_finish): Correctly skip over wide
	character era strings.
	* locale/lc-time.c (_nl_get_era_entry): Correctly skip era name
	and format for wide characters.